--- a/static/styles.css
+++ b/static/styles.css
@@ -116,12 +116,126 @@ nav {
 .contact-icons a img:hover {
     transform: scale(1.1);
 }
+/* Контакты */
+.contact-info ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: 1px solid #333;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.contact-info ul li {
+    margin-bottom: 10px;
+}
+
+.contact-info ul li a {
+    text-decoration: none;
+    color: #FFF700;
+    font-size: 16px;
+    font-weight: bold;
+}
+/* Обо мне */
+.about-section {
+    background-color: transparent;
+    padding: 20px;
+    border: 2px solid #ffff00;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 40px auto;
+    max-width: 800px;
+}
+.about-study {
+    margin-bottom: 20px;
+}
+
+.about-header {
+    margin-bottom: 20px;
+}
+
+.about-header h2 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.about-content {
+    margin-bottom: 20px;
+}
+
+.about-content p {
+    font-size: 20px;
+    color: #FFFFFF;
+}
+
+.about-skills {
+    margin-bottom: 20px;
+}
+
+.about-skills h3 {
+    font-size: 26px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.about-skills ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.about-skills ul li {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: #FFFFFF;
+}
+
+.about-resume {
+    margin-bottom: 20px;
+}
+
+.about-resume h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.about-resume img {
+    width: 34%;
+    height: auto;
+    border: 1px solid #ffff00;
+}
+
+.about-certificates {
+    margin-bottom: 20px;
+}
+
+.about-certificates h3 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+.certificate-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.certificate-row img {
+    width: 34%;
+    height: auto;
+    border: 1px solid #ffff00;
+    margin-bottom: 20px;
+}
+
 /* Портфолио */
 .portfolio {
     display: flex;
     padding: 50px;
     height: 90vh;
-    background-color: #1d1d1d;
 }
 
 .project-list {
@@ -149,9 +263,6 @@ nav {
     flex: 1;
     display: flex;
     align-items: center;
-    border: 1px solid #ccc;
-    background-color: rgba(255, 255, 255, 0.1);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
     position: relative;
     overflow: hidden; /* Скрываем переполнение */
@@ -161,6 +272,9 @@ nav {
     flex: 1;
     padding: 10px;
     cursor: pointer;
+    border: 2px solid yellow;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.1);
     transition: background-color 0.3s;
 }
 
@@ -173,6 +287,15 @@ nav {
     max-width: 100%;
     height: auto;
     margin-bottom: 15px;
+}
+
+.project-info h4 {
+    margin: 0;
+}
+
+.project.small-image img {
+    height: 55%; /* Уменьшаем высоту на 75% */
+    width: auto; /* Сохраняем пропорции */
 }
 
 .project-info:hover {
@@ -266,4 +389,35 @@ nav {
         justify-content: center;
         padding: 20px 0;
     }
+    .contact-info ul {
+        padding: 10px;
+    }
+    .contact-info ul li {
+        margin-bottom: 10px;
+    }
+    .about-section {
+        padding: 10px;
+    }
+    .about-header h2 {
+        font-size: 18px;
+    }
+    .about-content p {
+        font-size: 14px;
+    }
+    .about-skills ul li {
+        font-size: 14px;
+    }
+    .about-resume img {
+        width: 100%;
+        height: auto;
+    }
+    .certificate-row {
+        flex-direction: column;
+    }
+    .certificate-row img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
 }
