--- a/static/styles.css
+++ b/static/styles.css
@@ -425,21 +425,28 @@ nav {
     .project-list {
         position: relative;
         z-index: 1;
-        margin-bottom: 20px;
+        margin-bottom: 0;
     }
     .project-display {
-        flex-direction: column;
-        align-items: center;
         position: relative;
         z-index: 0;
+        margin-top: 0;
     }
     .project-info {
-        max-width: 100%;
+        width: 100%;
     }
     .project-content {
         padding: 20px;
     }
     .arrow {
-        margin: 10px 0;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+    .left-arrow {
+        left: 0;
+    }
+    .right-arrow {
+        right: 0;
     }
 }
