--- a/static/styles.css
+++ b/static/styles.css
@@ -437,17 +437,17 @@ nav {
         margin-bottom: 10px;
     }
 
+    .portfolio {
+        display: flex;
+        flex-direction: column;
+    }
     .project-list {
-        position: relative;
         z-index: 1;
         order: -1; /* Перемещаем блок перед project-display */
-        margin-bottom: 0;
     }
 
     .project-display {
-        position: relative;
-        z-index: 0;
-        margin-top: 0;
+        order: 0;
     }
 
     .project-info {
